overflow-x: hidden for mobiles fixed

--- a/public/styles/general.css
+++ b/public/styles/general.css
@@ -5,6 +5,7 @@ html {
 }
 
 body {
+    overflow-x: hidden;
     position: relative;
     font-family: 'Montserrat';
     line-height: 1.8em;
